--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <!-- ================= Header ================= -->
+  <!--  Header  -->
   <header>
     <div class="logo">FunTech Club</div>
     <div class="menu-btn" id="menu-btn">☰</div>
@@ -24,14 +24,15 @@
     </nav>
   </header>
 
-  <!-- ================= Hero Section ================= -->
+  <!--  Hero Section  -->
   <section id="home" class="hero">
     <h1>Welcome to FunTech Club 🎉</h1>
-    <p>Where learning meets creativity! Build, explore, and grow with us.</p>
+    <p>FunTech welcomes you to the world of technology aligned with creativity .
+This is a college club dedicated to inspiring and empowering students through technology and fun activities.</p>
     <a href="#join" class="btn">Join Now</a>
   </section>
 
-  <!-- ================= Events Section ================= -->
+  <!--Events Section -->
   <section id="events" class="events">
     <h2>What We Do</h2>
 
@@ -51,19 +52,16 @@
     </div>
   </section>
 
-  <!-- ================= Join Section ================= -->
   <section id="join" class="join-section">
     <h2>Join the FunTech Family!</h2>
     <p>Become a part of a passionate community of coders and creators.</p>
     <button class="btn" id="join-btn">Register Now</button>
   </section>
 
-  <!-- ================= Footer ================= -->
   <footer>
     <p>© 2025 FunTech Club | Built with 💻 and ❤️</p>
   </footer>
 
-  <!-- Main Script -->
   <script src="script.js"></script>
 </body>
 </html>
