--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@ This is a college club dedicated to inspiring and empowering students through te
   </section>
 
   <footer>
-    <p>© 2025 FunTech Club | Built with 💻 and ❤️</p>
+    <p>© FunTech Club </p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
